--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -19,7 +19,7 @@ pipelines:
               APPLICATION_NAME: $APPLICATION_NAME
               ZIP_FILE: 'application.zip'
               S3_BUCKET: $S3_BUCKET
-              VERSION_LABEL: 'my-app-2.0.0'
+              VERSION_LABEL: 'Login-1.0.0'
           - pipe: atlassian/aws-code-deploy:0.2.5
             variables:
               AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
@@ -30,6 +30,6 @@ pipelines:
               DEPLOYMENT_GROUP: $DEPLOYMENT_GROUP
               WAIT: 'true'
               S3_BUCKET: $S3_BUCKET
-              VERSION_LABEL: 'my-app-2.0.0'
+              VERSION_LABEL: 'Login-1.0.0'
               IGNORE_APPLICATION_STOP_FAILURES: 'true'
               FILE_EXISTS_BEHAVIOR: 'OVERWRITE'
