--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,7 @@ pipelines:
           caches:
             - node
           script:
+            - npm install -g @vue/cli
             - cd front-end
             - npm run build
             - cd ../
