sending scripts to .zip

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,9 +20,9 @@ pipelines:
           script:
             - apt-get update
             - apt-get install -y zip
-            - ls
             - mv back-end api
-            - zip -r application.zip ./api ./front-end/dist
+            - ls
+            - zip -r application.zip ./api ./front-end/dist ./scripts ./appspec.yml
             - pipe: atlassian/aws-code-deploy:0.5.4
               variables:
                 AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
