--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,6 +13,8 @@ pipelines:
             - npm install
             - npm run build
             - cd ../
+          artifacts:
+            - front-end/dist
       - step:
           name: aws code deploy
           caches:
@@ -21,8 +23,11 @@ pipelines:
             - apt-get update
             - apt-get install -y zip
             - mv back-end api
+            - cd front-end
             - ls
-            - zip -r application.zip ./api ./front-end/dist ./scripts ./appspec.yml
+            - cd ../
+            - ls
+            - zip -r application.zip ./api front-end/dist ./scripts ./appspec.yml
             - pipe: atlassian/aws-code-deploy:0.5.4
               variables:
                 AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
