add just dist to zip

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,10 +15,11 @@ pipelines:
             - npm install
             - npm run build
             - ls
+            - zip -r ../application.zip dist
             - cd ../
             - mv back-end api
             - ls
-            - zip -r application.zip ./api ./front-end/dist ./scripts ./appspec.yml
+            - zip -r application.zip ./api ./scripts ./appspec.yml
             - pipe: atlassian/aws-code-deploy:0.5.4
               variables:
                 AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
