testing front-end in s3

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,41 +5,52 @@ pipelines:
   branches:
     staging:
       - step:
-          name: Continuous Deployment
+          # name: Back-end
+          # caches:
+          #   - node
+          # script:
+          #   - apt-get update
+          #   - apt-get install -y zip
+          #   - mv back-end api
+          #   - ls
+          #   - zip -r application.zip ./api ./scripts ./appspec.yml
+          #   - pipe: atlassian/aws-code-deploy:0.5.4
+          #     variables:
+          #       AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
+          #       AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+          #       AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+          #       COMMAND: 'upload'
+          #       APPLICATION_NAME: $APPLICATION_NAME
+          #       ZIP_FILE: 'application.zip'
+          #       S3_BUCKET: $S3_BUCKET
+          #       VERSION_LABEL: 'Login-1.0.0'
+          #   - pipe: atlassian/aws-code-deploy:0.5.4
+          #     variables:
+          #       AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
+          #       AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+          #       AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+          #       COMMAND: 'deploy'
+          #       APPLICATION_NAME: $APPLICATION_NAME
+          #       DEPLOYMENT_GROUP: $DEPLOYMENT_GROUP
+          #       WAIT: 'true'
+          #       S3_BUCKET: $S3_BUCKET
+          #       VERSION_LABEL: 'Login-1.0.0'
+          #       IGNORE_APPLICATION_STOP_FAILURES: 'true'
+          #       FILE_EXISTS_BEHAVIOR: 'OVERWRITE'
+      - step:
+          name: Front end
           caches:
             - node
           script:
-            - apt-get update
-            - apt-get install -y zip
             - cd front-end
             - npm install
             - npm run build
             - ls
-            - zip -r ../application.zip dist
-            - cd ../
-            - mv back-end api
-            - ls
-            - zip -r application.zip ./api ./scripts ./appspec.yml
-            - pipe: atlassian/aws-code-deploy:0.5.4
+            - pipe: atlassian/aws-s3-deploy:0.4.5
               variables:
-                AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
                 AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
                 AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-                COMMAND: 'upload'
-                APPLICATION_NAME: $APPLICATION_NAME
-                ZIP_FILE: 'application.zip'
-                S3_BUCKET: $S3_BUCKET
-                VERSION_LABEL: 'Login-1.0.0'
-            - pipe: atlassian/aws-code-deploy:0.5.4
-              variables:
                 AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
-                AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-                AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-                COMMAND: 'deploy'
-                APPLICATION_NAME: $APPLICATION_NAME
-                DEPLOYMENT_GROUP: $DEPLOYMENT_GROUP
-                WAIT: 'true'
                 S3_BUCKET: $S3_BUCKET
-                VERSION_LABEL: 'Login-1.0.0'
-                IGNORE_APPLICATION_STOP_FAILURES: 'true'
-                FILE_EXISTS_BEHAVIOR: 'OVERWRITE'
+                LOCAL_PATH: './front-end/dist'
+            
