--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,7 +4,7 @@ image: node:10.15.3
 pipelines:
   branches:
     staging:
-      - step:
+      # - step:
           # name: Back-end
           # caches:
           #   - node
