--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -52,5 +52,5 @@ pipelines:
                 AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
                 AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
                 S3_BUCKET: $S3_BUCKET
-                LOCAL_PATH: './front-end/dist'
+                LOCAL_PATH: './dist'
             
